crates/dag-macros/tests/ui/workflow_switch_invalid_key.stderr
error: switch! requires `selector_pointer = "/json/pointer"`
  --> tests/ui/workflow_switch_invalid_key.rs:38:9
   |
38 |         pointer = "/type",
   |         ^^^^^^^
